adjusted all css issues. added spacing between result buttons and fixed recipe html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@
 .pure-img-responsive {
     width: 280px;
     height: 550px;
+    margin-top: 2em;
 }
 
 #layout {
@@ -65,8 +66,15 @@ html, body {
 .pure-button {
     color: white;
     border-radius: 4px;
+    border: slategrey;
     background: maroon;
     text-shadow: 0 1px 1px rgba(0,0,0, 0.2);
+}
+
+.searches {
+    width: 50%;
+    display: block;
+    margin: 50px 0;
 }
 
 .content-subhead {
@@ -87,10 +95,12 @@ html, body {
 }
 
 .footer {
+    width: 100%;
     position: fixed;
     bottom: 0;
     background: none;
     padding: 1em 0;
+    text-align: center;
 }
 .footer a {
     color: #ccc;
